# monotrack

./: .gitignore  LICENSE  README.md
TrackNetv2/: README.md
TrackNetv2/3_in_1_out/: Frame_Generator.py  Frame_Generator_batch.py  Rearrange_Label.py  TrackNet.py  accuracy.py  detect_FN.py  gen_data.py  gen_data_rally.py  model_33.REMOVED.git-id  predict.py  show_trajectory.py  test_33.txt  train_33.txt  train_TrackNet.py
TrackNetv2/3_in_3_out/: .gitignore  HitNet.py  TrackNet3.py  accuracy3.py  constants.py  data-exploration.ipynb  gen_data3.py  gen_data_hitnet.py  gen_data_rally3.py  generate-data.py  generate-mada-data.py  hitnet-train.py  hitnet-unet.ipynb  hitnet.ipynb  hitnet_conv_model_predict_player2.h5  hitnet_weights  model906_30.REMOVED.git-id  predict-mask.py  predict-regressor.py  predict3.py  random_relu.py  test3_33.txt  tracknet_improved.py  tracknet_notebook.ipynb  train3_33.txt  train_TrackNet3.py  train_augmented.ipynb  train_distill.py  train_faster.py  train_regressor.py
TrackNetv2/3_in_3_out/output/: output.mp4.REMOVED.git-id
badminton-court-detection/: CMakeLists.txt  CourtLineCandidateDetector.cpp  CourtLineCandidateDetector.h  CourtLinePixelDetector.cpp  CourtLinePixelDetector.h  DebugHelpers.cpp  DebugHelpers.h  GlobalParameters.cpp  README.md  TennisCourtFitter.cpp  TennisCourtFitter.h  TennisCourtModel.cpp  TennisCourtModel.h  compute_courts.sh  conanfile.txt  geometry.h  main.cpp
court-detection/: BadmintonCourtFitter.cpp  BadmintonCourtFitter.h  BadmintonCourtModel.cpp  BadmintonCourtModel.h  CourtLineCandidateDetector.cpp  CourtLinePixelDetector.cpp  CourtLinePixelDetector.h  DebugHelpers.cpp  DebugHelpers.h  GlobalParameters.cpp  GlobalParameters.h  LICENSE  Line.h  README.md  build.sh  geometry.cpp  geometry.h  main.cpp
deprecated/detectron2-segmenter/: process_video.py  video_to_pose.py
deprecated/detectron2-segmenter/configs/COCO-Detection/: retinanet_R_50_FPN_3x.yaml
deprecated/detectron2-segmenter/configs/COCO-Keypoints/: keypoint_rcnn_R_50_FPN_3x.yaml
deprecated/detectron2-segmenter/pipeline/: write_pose.py
deprecated/detectron2-segmenter/pipeline/libs/: async_predictor.py
deprecated/labeling_tool/: courts.pkl  label_courts.py  label_toolV2.py
deprecated/scripts/: setup_env.sh
deprecated/scripts/dataset/: dataset.py
detectron2-segmenter/: compute_poses.sh  process_badminton.ipynb
detectron2-segmenter/configs/COCO-Detection/: faster_rcnn_R_50_FPN_3x.yaml
detectron2-segmenter/configs/COCO-Keypoints/: keypoint_rcnn_R_50_FPN_3x.yaml
detectron2-segmenter/configs/COCO-PanopticSegmentation/: panoptic_fpn_R_50_3x.yaml
detectron2-segmenter/output/: kento-christie-20fps.mp4.REMOVED.git-id  lcw-kento-10fps.mp4.REMOVED.git-id
labeling_tool/: label_tool.py
mmpose/: run_mmpose.py
mmpose/configs/2d_kpt_sview_rgb_img/topdown_heatmap/coco/: hrnet_w48_coco_256x192.py
modified-tracknet/: README.md  data-exploration.ipynb  generate-data.py  train-hitnet.ipynb  train_distill.py  train_faster.py  utils.py  various-hitnet-archs.ipynb
modified-tracknet/deprecated/: hitnet-combined.ipynb  hitnet-regression.ipynb  train_dask_slices.py  train_test.py  train_tf_dataset.py
notebooks/: 3d-shot-reconstruction.ipynb  data-analysis.ipynb  detectron.ipynb  rally-segmenter.ipynb  scene-segmenter.ipynb  shot-searcher.ipynb  single-match-analysis.ipynb  trajectory_linking.ipynb  visualization.ipynb
python/ai-badminton/: MANIFEST.in  README.md  setup.py
python/ai-badminton/src/ai_badminton/: court.py  hit_detector.py  match.py  pipeline.py  pipeline_clean.py  pose.py  rally_reconstructor.py  shots.py  trajectory.py  trajectory_filter.py  video_annotator.py  video_utils.py
python/ai-badminton/tests/: test_simple.py
python/experiments/: plot_3D_trajectories.py
scripts/: cut-videos.sh  setup_env.sh  slugify-videos.sh
scripts/dataset/: find_unlabelled_mada.py  media.py  metadata_from_dataset.py  resample_dataset.py  split_videos.py  test_paths.py  visualize_dataset.py  visualize_mada.py
scripts/experiments/: test_mada.py
setup/: setup.py
tennis-court-detection/: CMakeLists.txt  CourtLinePixelDetector.cpp  GlobalParameters.h  Line.cpp  Line.h  TennisCourtFitter.cpp  TennisCourtFitter.h  TennisCourtModel.cpp  TennisCourtModel.h  build.sh  conanfile.txt  geometry.cpp  main.cpp
